# clawbird-dioxus

./: .gitignore  Cargo.toml  README.md
desktop/: Cargo.toml
mobile/: Cargo.toml
server/: Cargo.toml
server/src/: lib.rs
server/src/file/: file.rs
ui/: Cargo.toml
ui/assets/styling/: file.css
ui/src/: file.rs  lib.rs
web/: Cargo.toml
