[workspace]
resolver = "2"
members = [
  "ui",
  "web",
  "desktop",
  "mobile",
  "server",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
dioxus = { version = "0.6.3" }

# workspace
ui = { path = "ui" }
server = { path = "server" }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
