[package]
name = "mobile"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { workspace = true, features = ["router"] }
ui = { workspace = true }

[features]
default = []
# The web feature is enabled by the CLI when building the client (mobile) build
# Any web specific dependencies should be optional and only enabled in the mobile feature (for example, tokio should be added here)
mobile = ["dioxus/mobile"]
server = ["dioxus/server", "ui/server"]
