[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { workspace = true, features = ["fullstack"] }
# https://dioxuslabs.com/learn/0.6/guides/fullstack/managing_dependencies#adding-server-only-dependencies
tokio = { version = "1.44.0", features = ["full"], optional = true }

[features]
# The server feature should be enabled when building the server
# Any dependencies that are only required for the server build should be optional and only enabled in the server feature
server = ["dep:tokio"]
